--- a/Verdens-Maal-Skole/Verdens-Maal-Skole.csproj
+++ b/Verdens-Maal-Skole/Verdens-Maal-Skole.csproj
@@ -5,4 +5,9 @@
     <RootNamespace>Verdens_Maal_Skole</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
+  </ItemGroup>
+
 </Project>
