--- a/Verdens-Maal-Skole/Properties/launchSettings.json
+++ b/Verdens-Maal-Skole/Properties/launchSettings.json
@@ -25,7 +25,8 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": "true",
-      "applicationUrl": "http://192.168.1.116:25252"
+      "applicationUrl": "https://localhost:5001;http://localhost:5000"
+      //"applicationUrl": "http://192.168.1.116:25252"
     }
   }
 }
